@@ -4,6 +4,7 @@
 	Xinerama screen selection support (Tim Burrell, Jean-Matthieu BARBIER)
 	Make xosd_error, osd_default_font, osd_default_colour even more const.
 	Include X11/Xlib.h in src/testprog.c for XSupportsLocale()
+	Draw outline above shadow in bar (David Reiss)
 
 2.2.15:
 	Fix quotation in configure.ac
